# EasyPDF

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260616_0001_initial.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: assistant.py  corrections.py  documents.py  glossary.py  settings.py  translations.py
backend/app/core/: config.py
backend/app/db/: models.py
backend/app/schemas/: assistant.py  corrections.py  documents.py  glossary.py  settings.py  translations.py
backend/app/services/: ai_client.py  corrections.py  documents.py  docx_export.py  glossary.py  pdf_parser.py  prompts.py  settings.py  translations.py
backend/tests/: conftest.py  test_config.py  test_document_order.py  test_docx_export.py  test_glossary.py  test_pdf_parser.py  test_prompts.py  test_settings_api.py  test_translation_jobs.py  test_translation_states.py
docs/superpowers/plans/: 2026-06-16-easypdf-mvp-implementation.md  2026-06-17-reader-workbench-improvements.md  2026-06-18-reader-panels-ordering-docx-implementation.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: i18n.ts  preferences.ts  router.ts  styles.css  types.ts
frontend/src/api/: client.ts
frontend/tests/: api-client.test.ts  glossary.test.ts  preferences.test.ts  reader-selection.test.ts  reader-workbench.test.ts  translation-job.test.ts
scripts/: dev.ps1  init-db.sql
(+13 files in other folders)
