[project]
name = "easypdf-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pymysql>=1.1",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "pymupdf>=1.24",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=8.2", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
